finalProject/kubernetes/test/app-test-deployment-redis.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-test-deployment-redis
  labels:
    app: redis-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-test
  template:
    metadata:
      labels:
        app: redis-test
    spec:
      containers:
        - name: redis
          image: redis:7
          imagePullPolicy: Always
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data
          command: ["redis-server", "--save", "1", "1"]
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: app-test-pvc-redis
