finalProject/kubernetes/test/app-test-deployment-worker.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-test-deployment-worker
  labels:
    app: worker-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-test
  template:
    metadata:
      labels:
        app: worker-test
    spec:
      containers:
        - name: worker
          image: pressleywelsh/final-project:latest
          imagePullPolicy: Always
          env:
            - name: REDIS_IP
              value: app-test-service-redis
            - name: PYTHONPATH
              value: /app/src
          command: ["uv", "run", "python", "src/worker.py"]
