finalProject/kubernetes/test/app-test-ingress-FastAPI.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-test-ingress-fastapi
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: test-pressleywelsh524.coe332.tacc.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-test-service-nodeport-fastapi
                port:
                  number: 5000
