finalProject/kubernetes/test/app-test-service-FastAPI.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app-test-service-fastapi
spec:
  type: ClusterIP
  selector:
    app: fastapi-test
  ports:
    - name: fastapi-test
      port: 5000
      targetPort: 5000
