finalProject/kubernetes/test/app-test-service-nodeport-FastAPI.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app-test-service-nodeport-fastapi
spec:
  type: NodePort
  selector:
    app: fastapi-test
  ports:
    - port: 5000
      targetPort: 5000
