finalProject/kubernetes/test/app-test-service-redis.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app-test-service-redis
spec:
  type: ClusterIP
  selector:
    app: redis-test
  ports:
    - port: 6379
      targetPort: 6379
